--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		></script>
 	</head>
 	<body>
+
+   <!-- Header/navbar --> 
 		<div class="container">
 			<nav class="d-flex justify-content-between">
 				<a href="/">
