--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 		></script>
 	</head>
 	<body>
-
-   <!-- Header/navbar --> 
+		<!-- Header/navbar -->
 		<div class="container">
 			<nav class="d-flex justify-content-between">
 				<a href="/">
@@ -162,6 +161,40 @@
 					</div>
 				</div>
 			</div>
+
+			<footer>
+				<div class="contact-box d-flex justify-content-between mb- d-none d-md-flex">
+						<h4>Work Inquiry</h4>
+					<p class="text-muted">Let's work together</p>
+					</div>
+					<div>
+						<a
+							href=""
+							class="btn btn-branding"
+						>
+							Contact me</a
+						>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center">
+					<a
+						href="mailto:lfong96@hotmail.co.uk"
+						class="email-link"
+						>lfong96@hotmail.co.uk</a
+					>
+				</div>
+				<div class="social-links d-flex justify-content-center">
+					<a href="https://www.github.com/LwynnF"
+						><i class="fab fa-github"></i
+					></a>
+					<a href="https://www.linkedin.com/in/louise-fong"
+						><i class="fab fa-linkedin"></i
+					></a>
+					<a href="https://www.instagram.com/wynn.codes"
+						><i class="fab fa-instagram"></i
+					></a>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
