--- a/index.html
+++ b/index.html
@@ -163,9 +163,10 @@
 			</div>
 
 			<footer>
-				<div class="contact-box d-flex justify-content-between mb- d-none d-md-flex">
+				<div class="contact-box justify-content-between mb- d-none d-md-flex">
+					<div>
 						<h4>Work Inquiry</h4>
-					<p class="text-muted">Let's work together</p>
+						<p class="text-muted">Let's work together</p>
 					</div>
 					<div>
 						<a
