--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,57 @@
 		></script>
 	</head>
 	<body>
-		
+		<!-- Header/navbar -->
+		<div class="container">
+			<nav class="d-flex justify-content-between">
+				<a
+					href="/"
+					title="Homepage"
+				>
+					<img
+						class="logo d-none d-md-block"
+						src="images/logo.png"
+						alt=""
+					/>
+					<img
+						class="logo d-block d-md-none"
+						src="images/logo-small.jpeg"
+						alt=""
+					/>
+				</a>
+				<ul>
+					<li>
+						<a
+							href="/"
+							title="Homepage"
+							>Home</a
+						>
+					</li>
+					<li>
+						<a
+							href="/about.html"
+							title="About Louise"
+							>About</a
+						>
+					</li>
+					<li>
+						<a
+							href="/work.html"
+							title="Louise's Work"
+							>Work</a
+						>
+					</li>
+					<li class="active">
+						<a
+							href="/contact.html"
+							title="Contact Louise"
+							>Contact</a
+						>
+					</li>
+				</ul>
+			</nav>
+		</div>
+
 		<div class="content-container container">
 			<div class="content">
 				<h1 class="mb-5">Let's get in touch!</h1>
@@ -70,5 +120,49 @@
 				</p>
 			</div>
 		</div>
+
+			<footer class="container">
+				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+					<div>
+						<h3>Work Inquiry</h3>
+						<p class="text-muted">Let's work together</p>
+					</div>
+					<div>
+						<a
+							href="/contact.html"
+							class="btn btn-branding"
+							title="Contact Louise"
+						>
+							Contact me</a
+						>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center mb-5">
+					<a
+						href="mailto:lfong96@hotmail.co.uk"
+						class="email-link"
+						title="Email Louise"
+						>lfong96@hotmail.co.uk</a
+					>
+				</div>
+				<div class="social-links d-flex justify-content-center">
+					<a
+						href="https://www.github.com/LwynnF"
+						title="Github Profile"
+						><i class="fab fa-github"></i
+					></a>
+					<a
+						href="https://www.linkedin.com/in/louise-fong"
+						title="LinkedIn Profile"
+						><i class="fab fa-linkedin"></i
+					></a>
+					<a
+						href="https://www.instagram.com/wynn.codes"
+						title="Instagram Profile"
+						><i class="fab fa-instagram"></i
+					></a>
+				</div>
+				<p class="text-center mt-5">This project was coded by Louise Fong</p>
+			</footer>
 	</body>
 </html>
