--- a/about.html
+++ b/about.html
@@ -1,54 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>SheCodes Portfolio</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="styles/portfolio.css"
+		/>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Louise Fong</h1>
-            <h2 class="mb-4">Frontend Developer, based in Scotland.</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="" class="btn btn-branding">See my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
-        </div>
-      </div>
-    </div>
-  </body>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://kit.fontawesome.com/ddc3ee268a.js"
+			crossorigin="anonymous"
+		></script>
+	</head>
+	<body>
+		<!-- Header/navbar -->
+		<div class="container">
+			<nav class="d-flex justify-content-between">
+				<a
+					href="/"
+					title="Homepage"
+				>
+					<img
+						class="logo d-none d-md-block"
+						src="images/logo.png"
+						alt=""
+					/>
+					<img
+						class="logo d-block d-md-none"
+						src="images/logo-small.jpeg"
+						alt=""
+					/>
+				</a>
+				<ul>
+					<li >
+						<a
+							href="/"
+							title="Homepage"
+							>Home</a
+						>
+					</li>
+					<li class="active">
+						<a
+							href="/about.html"
+							title="About Louise"
+							>About</a
+						>
+					</li>
+					<li>
+						<a
+							href="/work.html"
+							title="Louise's Work"
+							>Work</a
+						>
+					</li>
+					<li>
+						<a
+							href="/contact.html"
+							title="Contact Louise"
+							>Contact</a
+						>
+					</li>
+				</ul>
+			</nav>
+		</div>
+
+		<div class="content-container container">
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="content">
+						<h1 class="mb-4">Hi I am Louise Fong</h1>
+						<h2 class="mb-4">Frontend Developer, based in Scotland.</h2>
+						<p class="mb-5">
+							For anyone who wants to start learning code, this workshop is very
+							interesting. You will be challenged with different exercises, and
+							everything is well explained, homework and deadlines are good for
+							keep focus
+						</p>
+						<a
+							href=""
+							class="btn btn-branding"
+							>See my projects</a
+						>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<img
+						src="images/patricia.png"
+						alt=""
+						class="img-fluid"
+					/>
+				</div>
+			</div>
+		</div>
+    	<footer class="container">
+				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+					<div>
+						<h3>Work Inquiry</h3>
+						<p class="text-muted">Let's work together</p>
+					</div>
+					<div>
+						<a
+							href="/contact.html"
+							class="btn btn-branding"
+							title="Contact Louise"
+						>
+							Contact me</a
+						>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center mb-5">
+					<a
+						href="mailto:lfong96@hotmail.co.uk"
+						class="email-link"
+						title="Email Louise"
+						>lfong96@hotmail.co.uk</a
+					>
+				</div>
+				<div class="social-links d-flex justify-content-center">
+					<a
+						href="https://www.github.com/LwynnF"
+						title="Github Profile"
+						><i class="fab fa-github"></i
+					></a>
+					<a
+						href="https://www.linkedin.com/in/louise-fong"
+						title="LinkedIn Profile"
+						><i class="fab fa-linkedin"></i
+					></a>
+					<a
+						href="https://www.instagram.com/wynn.codes"
+						title="Instagram Profile"
+						><i class="fab fa-instagram"></i
+					></a>
+				</div>
+				<p class="text-center mt-5">This project was coded by Louise Fong</p>
+			</footer>
+	</body>
 </html>
