--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>SheCodes Portfolio</title>
+		<meta
+			name="description"
+			content="Front-end developer based in Scotland, SheCodes Pro Graduate and Code First Girls Javascript Graduate"
+		/>
+		<title>Front-end developer - Louise Fong</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -45,7 +49,10 @@
 		<!-- Header/navbar -->
 		<div class="container">
 			<nav class="d-flex justify-content-between">
-				<a href="/">
+				<a
+					href="/"
+					title="Homepage"
+				>
 					<img
 						class="logo d-none d-md-block"
 						src="images/logo.png"
@@ -58,10 +65,34 @@
 					/>
 				</a>
 				<ul>
-					<li class="active"><a href="/">Home</a></li>
-					<li><a href="/about.html">About</a></li>
-					<li><a href="/work.html">Work</a></li>
-					<li><a href="/contact.html">Contact</a></li>
+					<li class="active">
+						<a
+							href="/"
+							title="Homepage"
+							>Home</a
+						>
+					</li>
+					<li>
+						<a
+							href="/about.html"
+							title="About Louise"
+							>About</a
+						>
+					</li>
+					<li>
+						<a
+							href="/work.html"
+							title="Louise's Work"
+							>Work</a
+						>
+					</li>
+					<li>
+						<a
+							href="/contact.html"
+							title="Contact Louise"
+							>Contact</a
+						>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -73,8 +104,9 @@
 			<h2 class="mb-5">Front-end developer based in Scotland</h2>
 			<div>
 				<a
-					href="#"
+					href="/contact.html"
 					class="btn btn-branding"
+					title="Contact Louise"
 					>Contact me</a
 				>
 			</div>
@@ -88,7 +120,7 @@
 					<img
 						src="images/yogurt.png"
 						class="img-fluid"
-						alt=""
+						alt="yogurt app"
 					/>
 				</div>
 				<div class="col">
@@ -101,7 +133,7 @@
 							large language ocean. A small river named Duden flows by
 						</p>
 						<a
-							href=""
+							href="/work.html"
 							class="btn btn-branding-outline"
 						>
 							Learn more
@@ -120,7 +152,7 @@
 							large language ocean. A small river named Duden flows by
 						</p>
 						<a
-							href=""
+							href="/work.html"
 							class="btn btn-branding-outline"
 						>
 							Learn more
@@ -131,7 +163,7 @@
 					<img
 						src="images/weather.png"
 						class="img-fluid"
-						alt=""
+						alt="weather app"
 					/>
 				</div>
 			</div>
@@ -140,7 +172,7 @@
 					<img
 						src="images/dictionary.png"
 						class="img-fluid"
-						alt=""
+						alt="dictionary app"
 					/>
 				</div>
 				<div class="col">
@@ -153,7 +185,7 @@
 							large language ocean. A small river named Duden flows by
 						</p>
 						<a
-							href=""
+							href="/work.html"
 							class="btn btn-branding-outline"
 						>
 							Learn more
@@ -162,39 +194,48 @@
 				</div>
 			</div>
 
-			<footer>
-				<div class="contact-box justify-content-between mb- d-none d-md-flex">
+			<footer class="container">
+				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
 					<div>
-						<h4>Work Inquiry</h4>
+						<h3>Work Inquiry</h3>
 						<p class="text-muted">Let's work together</p>
 					</div>
 					<div>
 						<a
-							href=""
+							href="/contact.html"
 							class="btn btn-branding"
+							title="Contact Louise"
 						>
 							Contact me</a
 						>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center">
+				<div class="d-flex justify-content-center mb-5">
 					<a
 						href="mailto:lfong96@hotmail.co.uk"
 						class="email-link"
+						title="Email Louise"
 						>lfong96@hotmail.co.uk</a
 					>
 				</div>
 				<div class="social-links d-flex justify-content-center">
-					<a href="https://www.github.com/LwynnF"
+					<a
+						href="https://www.github.com/LwynnF"
+						title="Github Profile"
 						><i class="fab fa-github"></i
 					></a>
-					<a href="https://www.linkedin.com/in/louise-fong"
+					<a
+						href="https://www.linkedin.com/in/louise-fong"
+						title="LinkedIn Profile"
 						><i class="fab fa-linkedin"></i
 					></a>
-					<a href="https://www.instagram.com/wynn.codes"
+					<a
+						href="https://www.instagram.com/wynn.codes"
+						title="Instagram Profile"
 						><i class="fab fa-instagram"></i
 					></a>
 				</div>
+				<p class="text-center mt-5">This project was coded by Louise Fong</p>
 			</footer>
 		</div>
 	</body>
