--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>SheCodes Portfolio</title>
+		<title>Contact Louise</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -52,12 +52,12 @@
 					<img
 						class="logo d-none d-md-block"
 						src="images/logo.png"
-						alt=""
+						alt="SheCodes logo"
 					/>
 					<img
 						class="logo d-block d-md-none"
 						src="images/logo-small.jpeg"
-						alt=""
+						alt="SheCodes small logo"
 					/>
 				</a>
 				<ul>
