Updated home and about page
Added skills icons, updated page content

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 					/>
 				</a>
 				<ul>
-					<li >
+					<li>
 						<a
 							href="/"
 							title="Homepage"
@@ -77,9 +77,9 @@
 					</li>
 					<li>
 						<a
-							href="/work.html"
+							href="/projects.html"
 							title="Louise's Work"
-							>Work</a
+							>Projects</a
 						>
 					</li>
 					<li>
@@ -98,7 +98,7 @@
 				<div class="col-lg-6">
 					<div class="content">
 						<h1 class="mb-4">Hi I am Louise Fong</h1>
-						<h2 class="mb-4">Frontend Developer, based in Scotland.</h2>
+						<h2 class="mb-4">Frontend Developer, based in the UK.</h2>
 						<p class="mb-5">
 							For anyone who wants to start learning code, this workshop is very
 							interesting. You will be challenged with different exercises, and
@@ -121,48 +121,91 @@
 				</div>
 			</div>
 		</div>
-    	<footer class="container">
-				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-					<div>
-						<h3>Work Inquiry</h3>
-						<p class="text-muted">Let's work together</p>
-					</div>
-					<div>
-						<a
-							href="/contact.html"
-							class="btn btn-branding"
-							title="Contact Louise"
-						>
-							Contact me</a
-						>
-					</div>
+
+		<div class="about-me container">
+			<h1>Then.</h1>
+			<p>
+				Prior to my coding and SheCodes journey, I was working in the finance
+				sector and after three years, I knew it was time for a new challenge. I
+				have always had an interest in tech and loved problem solving from a
+				young age, whether this be in the form of sudokus or playing Professor
+				Layton on my Nintendo DS. <br />
+				One day on Instagram, I started to notice ads for SheCodes and I decided
+				to join the SheCodes Express live coding class. It amazed me how quickly
+				I could see the result of the code and that coding is not as scary as it
+				seems. After that class, I signed myself up for the SheCodes Basics
+				course and the rest is history!
+			</p>
+
+			<h1>Now.</h1>
+			<p>
+				After completing the SheCodes Basics course, I felt that I had finally
+				found a new passion and loved the satisfaction from solving coding
+				errors. As of right now, I am currently participating in the SheCodes
+				Pro workshop - creating this portfolio as part of my SheCodes Responsive
+				final project.
+				<br />
+				I find that coding is best learnt through practice and ny participating
+				in the SheCodes challenges I am able to put my newly acquired skills and
+				knowledge into practice and have fun along the way.
+			</p>
+
+			<h1>Next.</h1>
+			<p>
+				Upon completion of the workshops and having upskilled - learning CSS,
+				HTML, Javascript, React and more technologies, I hope I am equipped with the skills to
+				break into the tech industry.
+				<br />
+				I chose to transition from finance to tech as I love the freedom for
+				creativity, the rewarding satisfaction from cracking coding issues but
+				most importantly I wanted to pursue a new career where typically women
+				are underpresented and to help bridge the gender gap in tech.
+			</p>
+		</div>
+
+		<!-- Footer -->
+		<footer class="container">
+			<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+				<div>
+					<h3>Work Inquiry</h3>
+					<p class="text-muted">Let's work together</p>
 				</div>
-				<div class="d-flex justify-content-center mb-5">
+				<div>
 					<a
-						href="mailto:lfong96@hotmail.co.uk"
-						class="email-link"
-						title="Email Louise"
-						>lfong96@hotmail.co.uk</a
+						href="/contact.html"
+						class="btn btn-branding"
+						title="Contact Louise"
+					>
+						Contact me</a
 					>
 				</div>
-				<div class="social-links d-flex justify-content-center">
-					<a
-						href="https://www.github.com/LwynnF"
-						title="Github Profile"
-						><i class="fab fa-github"></i
-					></a>
-					<a
-						href="https://www.linkedin.com/in/louise-fong"
-						title="LinkedIn Profile"
-						><i class="fab fa-linkedin"></i
-					></a>
-					<a
-						href="https://www.instagram.com/wynn.codes"
-						title="Instagram Profile"
-						><i class="fab fa-instagram"></i
-					></a>
-				</div>
-				<p class="text-center mt-5">This project was coded by Louise Fong</p>
-			</footer>
+			</div>
+			<div class="d-flex justify-content-center mb-5">
+				<a
+					href="mailto:lfong96@hotmail.co.uk"
+					class="email-link"
+					title="Email Louise"
+					>lfong96@hotmail.co.uk</a
+				>
+			</div>
+			<div class="social-links d-flex justify-content-center">
+				<a
+					href="https://www.github.com/LwynnF"
+					title="Github Profile"
+					><i class="fab fa-github"></i
+				></a>
+				<a
+					href="https://www.linkedin.com/in/louise-fong"
+					title="LinkedIn Profile"
+					><i class="fab fa-linkedin"></i
+				></a>
+				<a
+					href="https://www.instagram.com/wynn.codes"
+					title="Instagram Profile"
+					><i class="fab fa-instagram"></i
+				></a>
+			</div>
+			<p class="text-center mt-5">This project was coded by Louise Fong</p>
+		</footer>
 	</body>
 </html>
