--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Contact Louise</title>
+		<title>Contact Louise - Louise Fong</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -77,9 +77,9 @@
 					</li>
 					<li>
 						<a
-							href="/work.html"
+							href="/projects.html"
 							title="Louise's Work"
-							>Work</a
+							>Projects</a
 						>
 					</li>
 					<li class="active">
