--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			name="description"
 			content="Front-end developer based in Scotland, SheCodes Pro Graduate and Code First Girls Javascript Graduate"
 		/>
-		<title>Front-end developer - Louise Fong</title>
+		<title>Louise Fong's Portfolio</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -81,9 +81,9 @@
 					</li>
 					<li>
 						<a
-							href="/work.html"
+							href="/projects.html"
 							title="Louise's Work"
-							>Work</a
+							>Projects</a
 						>
 					</li>
 					<li>
@@ -98,10 +98,10 @@
 		</div>
 
 		<!-- Hero -->
-		<div class="hero">
+		<div class="main-hero">
 			<p>👋 Hello, I am</p>
 			<h1>Louise Fong</h1>
-			<h2 class="mb-5">Front-end developer based in Scotland</h2>
+			<h2 class="mb-5">Front-end developer based in the United Kingdom</h2>
 			<div>
 				<a
 					href="/contact.html"
@@ -111,132 +111,168 @@
 				>
 			</div>
 		</div>
-		<p class="text-center m-5">
-			Featured Project which my best projects be choice to show
-		</p>
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col d-none d-lg-block">
-					<img
-						src="images/yogurt.png"
-						class="img-fluid"
-						alt="yogurt app"
-					/>
-				</div>
-				<div class="col">
-					<div class="project-desciption">
-						<h2 class="mb-5">Yogurt Project</h2>
-						<p class="mb-5 text-muted">
-							Far far away, behind the word mountains, far from the countries
-							Vokalia and Consonantia, there live the blind texts. Separated
-							they live in Bookmarksgrove right at the coast of the Semantics, a
-							large language ocean. A small river named Duden flows by
-						</p>
-						<a
-							href="/work.html"
-							class="btn btn-branding-outline"
-						>
-							Learn more
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="row mb-5">
-				<div class="col">
-					<div class="project-desciption">
-						<h2 class="mb-5">Weather App</h2>
-						<p class="mb-5 text-muted">
-							Far far away, behind the word mountains, far from the countries
-							Vokalia and Consonantia, there live the blind texts. Separated
-							they live in Bookmarksgrove right at the coast of the Semantics, a
-							large language ocean. A small river named Duden flows by
-						</p>
-						<a
-							href="/work.html"
-							class="btn btn-branding-outline"
-						>
-							Learn more
-						</a>
-					</div>
-				</div>
-				<div class="col d-none d-lg-block">
-					<img
-						src="images/weather.png"
-						class="img-fluid"
-						alt="weather app"
-					/>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col d-none d-lg-block">
-					<img
-						src="images/dictionary.png"
-						class="img-fluid"
-						alt="dictionary app"
-					/>
-				</div>
-				<div class="col">
-					<div class="project-desciption">
-						<h2 class="mb-5">Dictionary App</h2>
-						<p class="mb-5 text-muted">
-							Far far away, behind the word mountains, far from the countries
-							Vokalia and Consonantia, there live the blind texts. Separated
-							they live in Bookmarksgrove right at the coast of the Semantics, a
-							large language ocean. A small river named Duden flows by
-						</p>
-						<a
-							href="/work.html"
-							class="btn btn-branding-outline"
-						>
-							Learn more
-						</a>
-					</div>
-				</div>
-			</div>
 
-			<footer class="container">
-				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-					<div>
-						<h3>Work Inquiry</h3>
-						<p class="text-muted">Let's work together</p>
+		<div class="container-fluid about-intro">
+			<div class="row">
+				<div class="col-6 hero">
+					<h3 class="mt-5">&lt; Hello World &gt;</h3>
+					<p>
+						Thank you for checking out my portfolio. My name is Louise and I am
+						a front-end developer based in Scotland. Aside from coding, I love
+						to cook, read murder mysteries and travel. <br />
+						Since starting my coding journey and joining SheCodes in January
+						2023, I have learnt a lot! <br />
+						Here's some technologies I've worked with:
+					</p>
+					<div class="row">
+						<div class="col skills-icon">
+							<img
+								src="icons/html.png"
+								alt="HTML Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/css.png"
+								alt="CSS Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/js.png"
+								alt="Javascript Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/vscode.png"
+								alt="VS Code Icon"
+								width="50"
+							/>
+						</div>
 					</div>
-					<div>
-						<a
-							href="/contact.html"
-							class="btn btn-branding"
-							title="Contact Louise"
-						>
-							Contact me</a
-						>
+					<div class="row">
+						<div class="col skills-icon">
+							<img
+								src="icons/api.png"
+								alt="API Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/github.png"
+								alt="Github Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/bootstrap.png"
+								alt="Bootstrap Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/hosting.png"
+								alt="Hosting Icon"
+								width="50"
+							/>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col skills-icon">
+							<img
+								src="icons/flexbox.png"
+								alt="Flexbox Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/seo.png"
+								alt="SEO Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/responsive.png"
+								alt="Responsive Icon"
+								width="50"
+							/>
+						</div>
+						<div class="col skills-icon">
+							<img
+								src="icons/react.png"
+								alt="React Icon"
+								width="50"
+							/>
+						</div>
 					</div>
 				</div>
-				<div class="d-flex justify-content-center mb-5">
-					<a
-						href="mailto:lfong96@hotmail.co.uk"
-						class="email-link"
-						title="Email Louise"
-						>lfong96@hotmail.co.uk</a
-					>
-				</div>
-				<div class="social-links d-flex justify-content-center">
-					<a
-						href="https://www.github.com/LwynnF"
-						title="Github Profile"
-						><i class="fab fa-github"></i
-					></a>
-					<a
-						href="https://www.linkedin.com/in/louise-fong"
-						title="LinkedIn Profile"
-						><i class="fab fa-linkedin"></i
-					></a>
-					<a
-						href="https://www.instagram.com/wynn.codes"
-						title="Instagram Profile"
-						><i class="fab fa-instagram"></i
-					></a>
-				</div>
-				<p class="text-center mt-5">This project was coded by Louise Fong</p>
-			</footer>
+			</div>
 		</div>
+
+		<div class="container">
+			<h2 class="text-center mt-5 mb-5">Certifications</h2>
+			<div class="row">
+				<div class="col">
+					<img
+						class="img-fluid"
+						src="images/basics-cert.png"
+						alt="SheCodes Basics Certificate"
+					/>
+				</div>
+				<div class="col">
+					<img
+						class="img-fluid"
+						src="images/plus-cert.png"
+						alt="SheCodes Plus Certificate"
+					/>
+				</div>
+				<div class="col">
+					<img
+						class="img-fluid"
+						src="images/plus-cert.png"
+						alt="SheCodes Plus Certificate"
+					/>
+				</div>
+			</div>
+		</div>
+
+		<hr />
+		<footer class="container text-center">
+			<a
+				href="mailto:lfong96@hotmail.co.uk"
+				class="email-link"
+				title="Email Louise"
+				>Reach out and let's code together!</a
+			>
+			<div class="social-links d-flex justify-content-center mt-3">
+				<a
+					href="https://www.github.com/LwynnF"
+					title="Github Profile"
+					><i class="fab fa-github"></i
+				></a>
+				<a
+					href="https://www.linkedin.com/in/louise-fong"
+					title="LinkedIn Profile"
+					><i class="fab fa-linkedin"></i
+				></a>
+				<a
+					href="https://www.instagram.com/wynn.codes"
+					title="Instagram Profile"
+					><i class="fab fa-instagram"></i
+				></a>
+			</div>
+			<p class="text-center mt-3">
+				Designed and coded by Louise Fong, open-sourced on Github.
+			</p>
+		</footer>
 	</body>
 </html>
