--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Louise's Projects</title>
+		<title>My Work - Louise Fong</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -77,9 +77,9 @@
 					</li>
 					<li class="active">
 						<a
-							href="/work.html"
+							href="/projects.html"
 							title="Louise's Work"
-							>Work</a
+							>Projects</a
 						>
 					</li>
 					<li>
@@ -144,48 +144,48 @@
 			</div>
 		</div>
 
-    	<footer class="container">
-				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-					<div>
-						<h3>Work Inquiry</h3>
-						<p class="text-muted">Let's work together</p>
-					</div>
-					<div>
-						<a
-							href="/contact.html"
-							class="btn btn-branding"
-							title="Contact Louise"
-						>
-							Contact me</a
-						>
-					</div>
+		<footer class="container">
+			<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+				<div>
+					<h3>Work Inquiry</h3>
+					<p class="text-muted">Let's work together</p>
 				</div>
-				<div class="d-flex justify-content-center mb-5">
+				<div>
 					<a
-						href="mailto:lfong96@hotmail.co.uk"
-						class="email-link"
-						title="Email Louise"
-						>lfong96@hotmail.co.uk</a
+						href="/contact.html"
+						class="btn btn-branding"
+						title="Contact Louise"
+					>
+						Contact me</a
 					>
 				</div>
-				<div class="social-links d-flex justify-content-center">
-					<a
-						href="https://www.github.com/LwynnF"
-						title="Github Profile"
-						><i class="fab fa-github"></i
-					></a>
-					<a
-						href="https://www.linkedin.com/in/louise-fong"
-						title="LinkedIn Profile"
-						><i class="fab fa-linkedin"></i
-					></a>
-					<a
-						href="https://www.instagram.com/wynn.codes"
-						title="Instagram Profile"
-						><i class="fab fa-instagram"></i
-					></a>
-				</div>
-				<p class="text-center mt-5">This project was coded by Louise Fong</p>
-			</footer>
+			</div>
+			<div class="d-flex justify-content-center mb-5">
+				<a
+					href="mailto:lfong96@hotmail.co.uk"
+					class="email-link"
+					title="Email Louise"
+					>lfong96@hotmail.co.uk</a
+				>
+			</div>
+			<div class="social-links d-flex justify-content-center">
+				<a
+					href="https://www.github.com/LwynnF"
+					title="Github Profile"
+					><i class="fab fa-github"></i
+				></a>
+				<a
+					href="https://www.linkedin.com/in/louise-fong"
+					title="LinkedIn Profile"
+					><i class="fab fa-linkedin"></i
+				></a>
+				<a
+					href="https://www.instagram.com/wynn.codes"
+					title="Instagram Profile"
+					><i class="fab fa-instagram"></i
+				></a>
+			</div>
+			<p class="text-center mt-5">This project was coded by Louise Fong</p>
+		</footer>
 	</body>
 </html>
