--- a/index.html
+++ b/index.html
@@ -112,41 +112,43 @@
 			</div>
 		</div>
 
-		<div class="container-fluid about-intro">
+		<!-- About and skills icons -->
+		<div class="container-fluid about-intro mx-5">
 			<div class="row">
 				<div class="col-6 hero">
-					<h3 class="mt-5">&lt; Hello World &gt;</h3>
+					<h3 class="mt-5 text-center">&lt; Hello World &gt;</h3>
 					<p>
 						Thank you for checking out my portfolio. My name is Louise and I am
 						a front-end developer based in Scotland. Aside from coding, I love
 						to cook, read murder mysteries and travel. <br />
+						<br />
 						Since starting my coding journey and joining SheCodes in January
 						2023, I have learnt a lot! <br />
 						Here's some technologies I've worked with:
 					</p>
-					<div class="row">
-						<div class="col skills-icon">
+					<div class="row skills-icon mt-5">
+						<div class="col">
 							<img
 								src="icons/html.png"
 								alt="HTML Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/css.png"
 								alt="CSS Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/js.png"
 								alt="Javascript Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/vscode.png"
 								alt="VS Code Icon"
@@ -154,29 +156,29 @@
 							/>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col skills-icon">
+					<div class="row skills-icon mt-3">
+						<div class="col">
 							<img
 								src="icons/api.png"
 								alt="API Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/github.png"
 								alt="Github Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/bootstrap.png"
 								alt="Bootstrap Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/hosting.png"
 								alt="Hosting Icon"
@@ -184,40 +186,57 @@
 							/>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col skills-icon">
+					<div class="row skills-icon mt-3">
+						<div class="col">
 							<img
 								src="icons/flexbox.png"
 								alt="Flexbox Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/seo.png"
 								alt="SEO Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/responsive.png"
 								alt="Responsive Icon"
 								width="50"
 							/>
 						</div>
-						<div class="col skills-icon">
+						<div class="col">
 							<img
 								src="icons/react.png"
 								alt="React Icon"
 								width="50"
 							/>
 						</div>
+
+						
+						
 					</div>
+					<!-- My story button -->
+					<a class="btn justify-content-center about-me mt-5" href="/about.html">About Me</a>
+				</div>
+
+				<!-- Photo -->
+				<div class="col-6">
+					<img
+						class="img-fluid"
+						src="images/louise.jpeg"
+						alt=""
+					/>
 				</div>
 			</div>
 		</div>
 
+		
+
+		<!-- Certifications -->
 		<div class="container">
 			<h2 class="text-center mt-5 mb-5">Certifications</h2>
 			<div class="row">
@@ -245,6 +264,7 @@
 			</div>
 		</div>
 
+		<!-- Footer -->
 		<hr />
 		<footer class="container text-center">
 			<a
