--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@
 								width="50"
 							/>
 						</div>
-
-						
-						
 					</div>
 					<!-- My story button -->
-					<a class="btn justify-content-center about-me mt-5" href="/about.html">About Me</a>
+					<a
+						class="btn justify-content-center about-me mt-5"
+						href="/about.html"
+						>About Me</a
+					>
 				</div>
 
 				<!-- Photo -->
@@ -233,8 +234,6 @@
 				</div>
 			</div>
 		</div>
-
-		
 
 		<!-- Certifications -->
 		<div class="container">
