--- a/projects.html
+++ b/projects.html
@@ -93,53 +93,75 @@
 			</nav>
 		</div>
 
-		<div class="content-container container">
-			<div class="content">
-				<h1 class="mb-5">Take a look at what I've been working on!</h1>
+		<!-- Project Hero -->
 
-				<div class="row">
-					<div class="col-md-6 mb-4">
+		<div class="main-hero">
+			<h1>My Projects</h1>
+		</div>
+
+		<div class="container-fluid">
+			<div class="row d-flex justify-content-evenly">
+				<h2 class="mt-5 mb-5 text-center">Coding Projects</h2>
+
+				<!-- Project 1 -->
+				<div class="col-sm-4">
+					<div class="image-container">
 						<img
-							src="images/yogurt.png"
-							class="img-fluid mb-3 rounded"
+							class="img-fluid hover-img"
+							src="images/santorini.png"
 							alt=""
 						/>
-						<h3 class="text-center m-0">Yogurt Project</h3>
-						<p class="text-center text-muted">Built with HTML and CSS</p>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a
+									href="https://travel-to-santorini.netlify.app"
+									target="_blank"
+									>Visit Dream Destination Landing Page</a
+								>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-6 mb-4">
-						<img
-							src="images/weather.png"
-							class="img-fluid mb-3 rounded"
-							alt=""
-						/>
-						<h3 class="text-center m-0">Weather Project</h3>
-						<p class="text-center text-muted">
-							Built with HTML, CSS and JavaScript
-						</p>
+					<h4 class="mt-2 text-center">Santorini Landing Page</h4>
+					<p class="text-center">
+						Built using HTML, CSS, Javascript and Editor for the SheCodes Dream
+						Destination Challenge.
+					</p>
+				</div>
+
+				<!-- Project 2 -->
+				<div class="col-sm-4">
+					<img
+						class="img-fluid hover-img"
+						src="images/matcha.png"
+						alt=""
+					/>
+					<div class="overlay">
+						<div class="overlay-text">
+							<a href="">Visit Matcha Landing Page</a>
+						</div>
 					</div>
-					<div class="col-md-6 mb-4">
-						<img
-							src="images/dictionary.png"
-							class="img-fluid mb-3 rounded"
-							alt=""
-						/>
-						<h3 class="text-center m-0">Dictionary App</h3>
-						<p class="text-center text-muted">
-							Built with HTML, CSS with React
-						</p>
+					<h4 class="mt-2 text-center">Matcha Landing Page</h4>
+					<p class="text-center">
+						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics Final Project.
+					</p>
+				</div>
+
+				<!-- Project 3 -->
+				<div class="col-sm-4">
+					<img
+						class="img-fluid hover-img"
+						src="images/matcha2.png"
+						alt=""
+					/>
+					<div class="overlay">
+						<div class="overlay-text">
+							<a href="">Visit Matcha Landing Page</a>
+						</div>
 					</div>
-					<div class="col-md-6 mb-4">
-						<img
-							src="images/translation.png"
-							class="img-fluid mb-3 rounded"
-							alt=""
-						/>
-						<h3 class="text-center m-0">Translation App</h3>
-						<p class="text-center text-muted">
-							Built with HTML, CSS with React
-						</p>
-					</div>
+					<h4 class="mt-2 text-center">Matcha Landing Page</h4>
+					<p class="text-center">
+						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics Final Project.
+					</p>
 				</div>
 			</div>
 		</div>
