--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,7 @@
 			<h1>My Projects</h1>
 		</div>
 
+		<!-- Coding Projects -->
 		<div class="container-fluid">
 			<div class="row d-flex justify-content-evenly">
 				<h2 class="mt-5 mb-5 text-center">Coding Projects</h2>
@@ -130,38 +131,50 @@
 
 				<!-- Project 2 -->
 				<div class="col-sm-4">
-					<img
-						class="img-fluid hover-img"
-						src="images/matcha.png"
-						alt=""
-					/>
-					<div class="overlay">
-						<div class="overlay-text">
-							<a href="">Visit Matcha Landing Page</a>
+					<div class="image-container">
+						<img
+							class="img-fluid hover-img"
+							src="images/matcha.png"
+							alt="Matcha Landing Page"
+						/>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a
+									href="https://learn-about-matcha.netlify.app/"
+									target="_blank"
+									>Visit Matcha Landing Page</a
+								>
+							</div>
 						</div>
 					</div>
 					<h4 class="mt-2 text-center">Matcha Landing Page</h4>
 					<p class="text-center">
-						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics Final Project.
+						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics
+						Final Project.
 					</p>
 				</div>
 
 				<!-- Project 3 -->
 				<div class="col-sm-4">
-					<img
-						class="img-fluid hover-img"
-						src="images/matcha2.png"
-						alt=""
-					/>
-					<div class="overlay">
-						<div class="overlay-text">
-							<a href="">Visit Matcha Landing Page</a>
+					<div class="image-container">
+						<img
+							class="img-fluid hover-img"
+							src="images/matcha2.png"
+							alt=""
+						/>
+						<div class="overlay">
+							<div class="overlay-text">
+								<a href="">Visit Matcha Landing Page</a>
+							</div>
 						</div>
+						</div>
+						<h4 class="mt-2 text-center">Matcha Landing Page</h4>
+						<p class="text-center">
+							Built using HTML, CSS, Javascript and Editor for the SheCodes
+							Basics Final Project.
+						</p>
 					</div>
-					<h4 class="mt-2 text-center">Matcha Landing Page</h4>
-					<p class="text-center">
-						Built using HTML, CSS, Javascript and Editor for the SheCodes Basics Final Project.
-					</p>
+					
 				</div>
 			</div>
 		</div>
