--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>SheCodes Portfolio</title>
+		<title>About - Louise Fong</title>
 
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -124,7 +124,7 @@
 
 		<div class="about-me container">
 			<h1>Then.</h1>
-			<p>
+			<p class="text-left">
 				Prior to my coding and SheCodes journey, I was working in the finance
 				sector and after three years, I knew it was time for a new challenge. I
 				have always had an interest in tech and loved problem solving from a
@@ -137,7 +137,7 @@
 				course and the rest is history!
 			</p>
 
-			<h1>Now.</h1>
+			<h1 class="text-end">Now.</h1>
 			<p>
 				After completing the SheCodes Basics course, I felt that I had finally
 				found a new passion and loved the satisfaction from solving coding
@@ -153,8 +153,8 @@
 			<h1>Next.</h1>
 			<p>
 				Upon completion of the workshops and having upskilled - learning CSS,
-				HTML, Javascript, React and more technologies, I hope I am equipped with the skills to
-				break into the tech industry.
+				HTML, Javascript, React and more technologies, I hope I am equipped with
+				the skills to break into the tech industry.
 				<br />
 				I chose to transition from finance to tech as I love the freedom for
 				creativity, the rewarding satisfaction from cracking coding issues but
