--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 					</div>
 					<!-- My story button -->
 					<a
-						class="btn justify-content-center about-me mt-5"
+						class="btn justify-content-center about-me-btn mt-5"
 						href="/about.html"
 						>About Me</a
 					>
