Added my-work hero

--- a/about.html
+++ b/about.html
@@ -93,102 +93,100 @@
 			</nav>
 		</div>
 
-		<div class="content-container container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="content">
-						<h1 class="mb-4">Hi I am Louise Fong</h1>
-						<h2 class="mb-4">Frontend Developer, based in the UK.</h2>
-						<p class="mb-5">
-							For anyone who wants to start learning code, this workshop is very
-							interesting. You will be challenged with different exercises, and
-							everything is well explained, homework and deadlines are good for
-							keep focus
-						</p>
-						<a
-							href=""
-							class="btn btn-branding"
-							>See my projects</a
-						>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<img
-						src="images/patricia.png"
-						alt=""
-						class="img-fluid"
-					/>
-				</div>
-			</div>
+		<div class="hero container-fluid">
+
+		
+			<h1 class="text-center my-story">MY STORY</h1>
+		
 		</div>
 
 		<div class="about-me container">
-			<h1>Then.</h1>
-			<p class="text-left">
-				Prior to my coding and SheCodes journey, I was working in the finance
-				sector and after three years, I knew it was time for a new challenge. I
-				have always had an interest in tech and loved problem solving from a
-				young age, whether this be in the form of sudokus or playing Professor
-				Layton on my Nintendo DS. <br />
-				One day on Instagram, I started to notice ads for SheCodes and I decided
-				to join the SheCodes Express live coding class. It amazed me how quickly
-				I could see the result of the code and that coding is not as scary as it
-				seems. After that class, I signed myself up for the SheCodes Basics
-				course and the rest is history!
-			</p>
+			<div class="row">
+				<!-- Then -->
+				<div class="col left-bg">
+					<h1>Then.</h1>
+					<p>
+						Prior to my coding and SheCodes journey, I was working in the
+						finance sector and after three years, I knew it was time for a new
+						challenge. I have always had an interest in tech and loved problem
+						solving from a young age, whether this be in the form of sudokus or
+						playing Professor Layton on my Nintendo DS. <br />
+						One day on Instagram, I started to notice ads for SheCodes and I
+						decided to join the SheCodes Express live coding class. It amazed me
+						how quickly I could see the result of the code and that coding is
+						not as scary as it seems. After that class, I signed myself up for
+						the SheCodes Basics course and the rest is history!
+					</p>
+				</div>
 
-			<h1 class="text-end">Now.</h1>
-			<p>
-				After completing the SheCodes Basics course, I felt that I had finally
-				found a new passion and loved the satisfaction from solving coding
-				errors. As of right now, I am currently participating in the SheCodes
-				Pro workshop - creating this portfolio as part of my SheCodes Responsive
-				final project.
-				<br />
-				I find that coding is best learnt through practice and ny participating
-				in the SheCodes challenges I am able to put my newly acquired skills and
-				knowledge into practice and have fun along the way.
-			</p>
+				<!-- Now -->
+				<div class="row">
+					<div class="col">
+						<h1 class="text-end">Now.</h1>
+						<p class="text-end">
+							After completing the SheCodes Basics course, I felt that I had
+							finally found a new passion and loved the satisfaction from
+							solving coding errors. As of right now, I am currently
+							participating in the SheCodes Pro workshop - creating this
+							portfolio as part of my SheCodes Responsive final project.
+							<br />
+							I find that coding is best learnt through practice and ny
+							participating in the SheCodes challenges I am able to put my newly
+							acquired skills and knowledge into practice and have fun along the
+							way.
+						</p>
+					</div>
+				</div>
 
-			<h1>Next.</h1>
-			<p>
-				Upon completion of the workshops and having upskilled - learning CSS,
-				HTML, Javascript, React and more technologies, I hope I am equipped with
-				the skills to break into the tech industry.
-				<br />
-				I chose to transition from finance to tech as I love the freedom for
-				creativity, the rewarding satisfaction from cracking coding issues but
-				most importantly I wanted to pursue a new career where typically women
-				are underpresented and to help bridge the gender gap in tech.
-			</p>
+				<!-- Next -->
+				<div class="row">
+					<div class="col">
+						<h1>Next.</h1>
+						<p>
+							Upon completion of the workshops and having upskilled - learning
+							CSS, HTML, Javascript, React and more technologies, I hope I am
+							equipped with the skills to break into the tech industry.
+							<br />
+							I chose to transition from finance to tech as I love the freedom
+							for creativity, the rewarding satisfaction from cracking coding
+							issues but most importantly I wanted to pursue a new career where
+							typically women are underpresented and to help bridge the gender
+							gap in tech.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- About Me Images -->
+		<div class="about-me-images mt-5">
+			<div class=" img-fluid d-flex justify-content-around">
+				<img
+					class="img-fluid"
+					src="images/circus-lane.JPG"
+					alt="Sea View"
+				/>
+				<img
+					src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/081/920/original/sunset.png?1684080425"
+					alt="Arch View"
+				/>
+				<img
+					src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/081/918/original/houses.png?1684080415"
+					alt="Houses"
+				/>
+			</div>
 		</div>
 
 		<!-- Footer -->
-		<footer class="container">
-			<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-				<div>
-					<h3>Work Inquiry</h3>
-					<p class="text-muted">Let's work together</p>
-				</div>
-				<div>
-					<a
-						href="/contact.html"
-						class="btn btn-branding"
-						title="Contact Louise"
-					>
-						Contact me</a
-					>
-				</div>
-			</div>
-			<div class="d-flex justify-content-center mb-5">
-				<a
-					href="mailto:lfong96@hotmail.co.uk"
-					class="email-link"
-					title="Email Louise"
-					>lfong96@hotmail.co.uk</a
-				>
-			</div>
-			<div class="social-links d-flex justify-content-center">
+		<hr />
+		<footer class="container text-center">
+			<a
+				href="mailto:lfong96@hotmail.co.uk"
+				class="email-link"
+				title="Email Louise"
+				>Reach out and let's code together!</a
+			>
+			<div class="social-links d-flex justify-content-center mt-3">
 				<a
 					href="https://www.github.com/LwynnF"
 					title="Github Profile"
@@ -205,7 +203,9 @@
 					><i class="fab fa-instagram"></i
 				></a>
 			</div>
-			<p class="text-center mt-5">This project was coded by Louise Fong</p>
+			<p class="text-center mt-3">
+				Designed and coded by Louise Fong, open-sourced on Github.
+			</p>
 		</footer>
 	</body>
 </html>
