--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
 		<!-- About and skills icons -->
 		<div class="container-fluid about-intro mx-5">
 			<div class="row">
-				<div class="col-6 hero">
-					<h3 class="mt-5 text-center">&lt; Hello World &gt;</h3>
+				<div class="col-6">
+					<h3 class="mt-5 text-center mb-5">&lt; Hello World &gt;</h3>
 					<p>
 						Thank you for checking out my portfolio. My name is Louise and I am
-						a front-end developer based in Scotland. Aside from coding, I love
-						to cook, read murder mysteries and travel. <br />
+						a front-end developer based and full-time tea addict based in Scotland.
+						Aside from coding, I love to cook, read murder mysteries and travel.
+						<br />
 						<br />
 						Since starting my coding journey and joining SheCodes in January
 						2023, I have learnt a lot! <br />
@@ -227,17 +228,50 @@
 				<!-- Photo -->
 				<div class="col-6">
 					<img
-						class="img-fluid"
-						src="images/louise.jpeg"
+						class="img-fluid left-rounded"
+						src="images/louise.png"
 						alt=""
 					/>
 				</div>
 			</div>
 		</div>
 
+		<!-- Explore Projects -->
+		<div class="container-fluid about-intro mx-5">
+			<div class="row">
+				<!-- Photo -->
+				<div class="col-6">
+					<img
+						class="img-fluid right-rounded"
+						src="images/matcha.png"
+						alt=""
+					/>
+				</div>
+
+				<div class="col-6">
+					<h3 class="mt-5 mb-5 text-center">&lt; Explore My Projects &gt;</h3>
+					<p>
+						Whilst you're here, why not take a look at my projects? Since the
+						start of my coding journey I have found it to be a satisfying and
+						rewarding process. I am constantly learning something new and have
+						discovered that Google is my best friend, never be afraid to ask
+						questions when stuck! I love late night coding sessions whilst
+						listening to lo-fi playlists.
+					</p>
+
+					<!-- My work button -->
+					<a
+						class="btn justify-content-center about-me-btn"
+						href="/projects.html"
+						>My Work</a
+					>
+				</div>
+			</div>
+		</div>
+
 		<!-- Certifications -->
 		<div class="container">
-			<h2 class="text-center mt-5 mb-5">Certifications</h2>
+			<h2 class="text-center mt-5 mb-5">&lt; Certifications &gt;</h2>
 			<div class="row">
 				<div class="col">
 					<img
