--- a/projects.html
+++ b/projects.html
@@ -95,8 +95,8 @@
 
 		<!-- Project Hero -->
 
-		<div class="main-hero">
-			<h1>My Projects</h1>
+		<div >
+			<img class="img-fluid" src="images/work.png" alt="My Work Logo">
 		</div>
 
 		<!-- Coding Projects -->
@@ -159,7 +159,7 @@
 					<div class="image-container">
 						<img
 							class="img-fluid hover-img"
-							src="images/matcha2.png"
+							src="images/matcha.png"
 							alt=""
 						/>
 						<div class="overlay">
