--- a/contact.html
+++ b/contact.html
@@ -43,126 +43,153 @@
 	</head>
 	<body>
 		<!-- Header/navbar -->
-		<div class="container">
-			<nav class="d-flex justify-content-between">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
 				<a
+					class="navbar-brand"
 					href="/"
 					title="Homepage"
 				>
 					<img
-						class="logo d-none d-md-block"
 						src="images/logo.png"
-						alt="SheCodes logo"
-					/>
-					<img
-						class="logo d-block d-md-none"
-						src="images/logo-small.jpeg"
-						alt="SheCodes small logo"
+						alt="Louise Fong Logo"
+						class="img-fluid logo"
+						width="100px"
 					/>
 				</a>
-				<ul>
-					<li>
-						<a
-							href="/"
-							title="Homepage"
-							>Home</a
-						>
-					</li>
-					<li>
-						<a
-							href="/about.html"
-							title="About Louise"
-							>About</a
-						>
-					</li>
-					<li>
-						<a
-							href="/projects.html"
-							title="Louise's Work"
-							>Projects</a
-						>
-					</li>
-					<li class="active">
-						<a
-							href="/contact.html"
-							title="Contact Louise"
-							>Contact</a
-						>
-					</li>
-				</ul>
-			</nav>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div
+					class="collapse navbar-collapse"
+					id="navbarNav"
+				>
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								aria-current="page"
+								href="/"
+								title="Homepage"
+								>HOME</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/about.html"
+								title="My Story"
+								>MY STORY</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link"
+								href="/work.html"
+								title="My work"
+								>MY WORK</a
+							>
+						</li>
+						<li class="nav-item px-4">
+							<a
+								class="nav-link active"
+								href="/contact.html"
+								title="Contact Louise"
+								>CONTACT</a
+							>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+
+		<!-- Hero -->
+		<div class="hero container-fluid">
+			<img
+				class="img-fluid"
+				src="images/contact-hero.png"
+				alt="Louise Fong Logo"
+			/>
 		</div>
 
-		<div class="content-container container">
-			<div class="content">
-				<h1 class="mb-5">Let's get in touch!</h1>
-				<h3>Email</h3>
-				<p>
-					<a href="mailto:lfong96@hotmail.co.uk"> lfong96@hotmail.co.uk </a>
-				</p>
-				<h3>LinkedIn</h3>
-				<p>
-					<a
-						href="https://www.linkedin/in/louise-fong"
-						target="_blank"
-					>
-						@patricia
-					</a>
-				</p>
-				<h3>Instagram</h3>
-				<p>
-					<a
-						href="https://www.instagram.com/patricia.codes"
-						target="_blank"
-					>
-						@wynn.codes
-					</a>
-				</p>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-6">
+					<img
+						class="img-fluid right-rounded"
+						src="images/laptop.png"
+						alt="Laptop"
+					/>
+				</div>
+
+				<div class="col-sm-6 justify-content-center">
+					<div class="contact">
+						<h2 class="text-center">&lt Connect Code Create &gt</h2>
+						<h3 class="text-center">Email</h3>
+						<a
+							class="contact-links"
+							href="mailto:lfong96@hotmail.co.uk"
+							target="_blank"
+							>lfong96@hotmail.co.uk</a
+						>
+
+						<h3 class="text-center">Instagram</h3>
+						<a
+							class="contact-links"
+							href="https://www.instagram.com/wynn.codes"
+							target="_blank"
+							>@wynn.codes</a
+						>
+
+						<h3 class="text-center">LinkedIn</h3>
+						<a
+							class="contact-links"
+							href="https://www.linkedin.com/in/louise-fong"
+							target="_blank"
+							>@wynn.codes</a
+						>
+					</div>
+				</div>
 			</div>
 		</div>
 
-			<footer class="container">
-				<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-					<div>
-						<h3>Work Inquiry</h3>
-						<p class="text-muted">Let's work together</p>
-					</div>
-					<div>
-						<a
-							href="/contact.html"
-							class="btn btn-branding"
-							title="Contact Louise"
-						>
-							Contact me</a
-						>
-					</div>
-				</div>
-				<div class="d-flex justify-content-center mb-5">
-					<a
-						href="mailto:lfong96@hotmail.co.uk"
-						class="email-link"
-						title="Email Louise"
-						>lfong96@hotmail.co.uk</a
-					>
-				</div>
-				<div class="social-links d-flex justify-content-center">
-					<a
-						href="https://www.github.com/LwynnF"
-						title="Github Profile"
-						><i class="fab fa-github"></i
-					></a>
-					<a
-						href="https://www.linkedin.com/in/louise-fong"
-						title="LinkedIn Profile"
-						><i class="fab fa-linkedin"></i
-					></a>
-					<a
-						href="https://www.instagram.com/wynn.codes"
-						title="Instagram Profile"
-						><i class="fab fa-instagram"></i
-					></a>
-				</div>
-				<p class="text-center mt-5">This project was coded by Louise Fong</p>
-			</footer>
+		<!-- Footer -->
+		<hr class="mt-5" />
+		<footer class="container text-center">
+			<a
+				href="mailto:lfong96@hotmail.co.uk"
+				class="email-link"
+				title="Email Louise"
+				>Reach out and let's code together!</a
+			>
+			<div class="social-links d-flex justify-content-center mt-3">
+				<a
+					href="https://www.github.com/LwynnF"
+					title="Github Profile"
+					><i class="fab fa-github"></i
+				></a>
+				<a
+					href="https://www.linkedin.com/in/louise-fong"
+					title="LinkedIn Profile"
+					><i class="fab fa-linkedin"></i
+				></a>
+				<a
+					href="https://www.instagram.com/wynn.codes"
+					title="Instagram Profile"
+					><i class="fab fa-instagram"></i
+				></a>
+			</div>
+			<p class="text-center mt-3">
+				Designed and coded by Louise Fong, open-sourced on Github.
+			</p>
+		</footer>
 	</body>
 </html>
